--- a/product-hunt/product-hunt/Base.lproj/Main.storyboard
+++ b/product-hunt/product-hunt/Base.lproj/Main.storyboard
@@ -5,8 +5,15 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-DemiBold</string>
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--ProductTableVC-->
         <scene sceneID="4K5-0s-2WO">
@@ -17,13 +24,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="productCell" id="aVp-6G-UwW" userLabel="ProductCell">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="productCell" rowHeight="107" id="aVp-6G-UwW" userLabel="ProductCell" customClass="ProductViewCell" customModule="product_hunt">
+                                <rect key="frame" x="0.0" y="28" width="375" height="107"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aVp-6G-UwW" id="Xqa-Te-xeS">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="106.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i94-HD-g3a">
+                                            <rect key="frame" x="8" y="12" width="359" height="24"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tagline" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg6-lU-k8b">
+                                            <rect key="frame" x="8" y="44" width="359" height="20"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="votes count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qis-e2-Kqo">
+                                            <rect key="frame" x="8" y="72" width="359" height="20"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="leading" secondItem="Xqa-Te-xeS" secondAttribute="leadingMargin" id="28w-29-Vvx"/>
+                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="leading" secondItem="Xqa-Te-xeS" secondAttribute="leadingMargin" id="GAM-it-c6q"/>
+                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="top" secondItem="i94-HD-g3a" secondAttribute="bottom" constant="8" id="PpN-Av-u57"/>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="trailing" secondItem="Xqa-Te-xeS" secondAttribute="trailingMargin" id="Wbw-fR-Fhj"/>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="top" secondItem="Xqa-Te-xeS" secondAttribute="topMargin" constant="4" id="gHg-Nr-dVm"/>
+                                        <constraint firstItem="qis-e2-Kqo" firstAttribute="top" secondItem="gg6-lU-k8b" secondAttribute="bottom" constant="8" id="tHt-wo-dQ0"/>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="trailing" secondItem="gg6-lU-k8b" secondAttribute="trailing" id="usa-dt-h5t"/>
+                                        <constraint firstItem="qis-e2-Kqo" firstAttribute="leading" secondItem="Xqa-Te-xeS" secondAttribute="leadingMargin" id="xJA-Oe-8Nc"/>
+                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="trailing" secondItem="qis-e2-Kqo" secondAttribute="trailing" id="zXe-yd-Qhx"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="productName" destination="i94-HD-g3a" id="NgE-ms-4zU"/>
+                                    <outlet property="tagline" destination="gg6-lU-k8b" id="mTe-fu-SSl"/>
+                                    <outlet property="votesCount" destination="qis-e2-Kqo" id="Tks-d3-CBO"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -43,19 +86,49 @@
         <!--CommentsTableVC-->
         <scene sceneID="uug-yM-y74">
             <objects>
-                <tableViewController id="6tc-M3-cLk" userLabel="CommentsTableVC" customClass="CommentsTableVC" customModule="product_hunt" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="CommentsTableVC" id="6tc-M3-cLk" userLabel="CommentsTableVC" customClass="CommentsTableVC" customModule="product_hunt" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="R1D-Ws-B29">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" id="KQn-xj-TYt" userLabel="CommentCell">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="137" id="KQn-xj-TYt" userLabel="CommentCell" customClass="CommentViewCell" customModule="product_hunt">
+                                <rect key="frame" x="0.0" y="28" width="375" height="137"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KQn-xj-TYt" id="4lO-Lq-WM8">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="136.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yt-eN-RVm">
+                                            <rect key="frame" x="8" y="30" width="359" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="36" id="LPd-2g-jhF"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lck-2o-iw7">
+                                            <rect key="frame" x="8" y="74" width="359" height="55"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="1yt-eN-RVm" firstAttribute="leading" secondItem="lck-2o-iw7" secondAttribute="leading" id="OVj-YJ-fVd"/>
+                                        <constraint firstItem="1yt-eN-RVm" firstAttribute="trailing" secondItem="lck-2o-iw7" secondAttribute="trailing" id="PL2-DV-2lL"/>
+                                        <constraint firstItem="lck-2o-iw7" firstAttribute="top" secondItem="1yt-eN-RVm" secondAttribute="bottom" constant="8" symbolic="YES" id="PbJ-AN-rfA"/>
+                                        <constraint firstItem="1yt-eN-RVm" firstAttribute="top" secondItem="4lO-Lq-WM8" secondAttribute="topMargin" constant="22" id="UXk-ot-NVu"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="lck-2o-iw7" secondAttribute="bottom" constant="-0.5" id="bGI-uC-rQs"/>
+                                        <constraint firstItem="1yt-eN-RVm" firstAttribute="trailing" secondItem="4lO-Lq-WM8" secondAttribute="trailingMargin" id="bPa-4D-Pld"/>
+                                        <constraint firstItem="1yt-eN-RVm" firstAttribute="leading" secondItem="4lO-Lq-WM8" secondAttribute="leadingMargin" id="xEV-4c-Mpi"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="CommentBodyLabel" destination="lck-2o-iw7" id="ixS-ol-isu"/>
+                                    <outlet property="ProductNameLabel" destination="1yt-eN-RVm" id="Nhl-0C-SOs"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
