--- a/product-hunt/product-hunt/Base.lproj/Main.storyboard
+++ b/product-hunt/product-hunt/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="137" id="KQn-xj-TYt" userLabel="CommentCell" customClass="CommentViewCell" customModule="product_hunt">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CommentViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="137" id="KQn-xj-TYt" userLabel="CommentCell" customClass="CommentViewCell" customModule="product_hunt">
                                 <rect key="frame" x="0.0" y="28" width="375" height="137"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KQn-xj-TYt" id="4lO-Lq-WM8">
