--- a/product-hunt/product-hunt/Base.lproj/Main.storyboard
+++ b/product-hunt/product-hunt/Base.lproj/Main.storyboard
@@ -31,38 +31,53 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="106.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i94-HD-g3a">
-                                            <rect key="frame" x="8" y="12" width="359" height="24"/>
-                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tagline" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg6-lU-k8b">
-                                            <rect key="frame" x="8" y="44" width="359" height="20"/>
+                                            <rect key="frame" x="142" y="44" width="225" height="20"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="votes count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qis-e2-Kqo">
-                                            <rect key="frame" x="8" y="72" width="359" height="20"/>
+                                            <rect key="frame" x="142" y="72" width="225" height="20"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i94-HD-g3a">
+                                            <rect key="frame" x="142" y="12" width="225" height="24"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hoQ-Ds-HUm">
+                                            <rect key="frame" x="8" y="-10" width="126" height="128"/>
+                                            <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="126" id="doC-Ti-uN4"/>
+                                            </constraints>
+                                            <wkWebViewConfiguration key="configuration">
+                                                <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                                <wkPreferences key="preferences"/>
+                                            </wkWebViewConfiguration>
+                                        </wkWebView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="i94-HD-g3a" firstAttribute="leading" secondItem="Xqa-Te-xeS" secondAttribute="leadingMargin" id="28w-29-Vvx"/>
-                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="leading" secondItem="Xqa-Te-xeS" secondAttribute="leadingMargin" id="GAM-it-c6q"/>
-                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="top" secondItem="i94-HD-g3a" secondAttribute="bottom" constant="8" id="PpN-Av-u57"/>
-                                        <constraint firstItem="i94-HD-g3a" firstAttribute="trailing" secondItem="Xqa-Te-xeS" secondAttribute="trailingMargin" id="Wbw-fR-Fhj"/>
-                                        <constraint firstItem="i94-HD-g3a" firstAttribute="top" secondItem="Xqa-Te-xeS" secondAttribute="topMargin" constant="4" id="gHg-Nr-dVm"/>
-                                        <constraint firstItem="qis-e2-Kqo" firstAttribute="top" secondItem="gg6-lU-k8b" secondAttribute="bottom" constant="8" id="tHt-wo-dQ0"/>
-                                        <constraint firstItem="i94-HD-g3a" firstAttribute="trailing" secondItem="gg6-lU-k8b" secondAttribute="trailing" id="usa-dt-h5t"/>
-                                        <constraint firstItem="qis-e2-Kqo" firstAttribute="leading" secondItem="Xqa-Te-xeS" secondAttribute="leadingMargin" id="xJA-Oe-8Nc"/>
-                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="trailing" secondItem="qis-e2-Kqo" secondAttribute="trailing" id="zXe-yd-Qhx"/>
+                                        <constraint firstItem="qis-e2-Kqo" firstAttribute="top" secondItem="gg6-lU-k8b" secondAttribute="bottom" constant="8" symbolic="YES" id="0kc-TS-hvP"/>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="leading" secondItem="hoQ-Ds-HUm" secondAttribute="trailing" constant="8" symbolic="YES" id="45C-6W-Zw9"/>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="trailing" secondItem="Xqa-Te-xeS" secondAttribute="trailingMargin" id="Ad4-dt-aM7"/>
+                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="leading" secondItem="qis-e2-Kqo" secondAttribute="leading" id="JBk-XJ-M8j"/>
+                                        <constraint firstItem="hoQ-Ds-HUm" firstAttribute="leading" secondItem="Xqa-Te-xeS" secondAttribute="leadingMargin" id="OVM-GP-4g9"/>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="trailing" secondItem="gg6-lU-k8b" secondAttribute="trailing" id="T88-Bc-1Fg"/>
+                                        <constraint firstItem="hoQ-Ds-HUm" firstAttribute="top" secondItem="Xqa-Te-xeS" secondAttribute="topMargin" constant="-18" id="epz-HB-51O"/>
+                                        <constraint firstItem="i94-HD-g3a" firstAttribute="leading" secondItem="gg6-lU-k8b" secondAttribute="leading" id="fv4-Om-LjH"/>
+                                        <constraint firstItem="hoQ-Ds-HUm" firstAttribute="centerY" secondItem="gg6-lU-k8b" secondAttribute="centerY" id="tx1-Rg-d94"/>
+                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="trailing" secondItem="qis-e2-Kqo" secondAttribute="trailing" id="udN-H9-lhr"/>
+                                        <constraint firstItem="hoQ-Ds-HUm" firstAttribute="centerY" secondItem="Xqa-Te-xeS" secondAttribute="centerY" id="usN-5f-jJP"/>
+                                        <constraint firstItem="gg6-lU-k8b" firstAttribute="top" secondItem="i94-HD-g3a" secondAttribute="bottom" constant="8" symbolic="YES" id="yZr-27-M34"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="productImage" destination="hoQ-Ds-HUm" id="AfV-xM-ZRZ"/>
                                     <outlet property="productName" destination="i94-HD-g3a" id="NgE-ms-4zU"/>
                                     <outlet property="tagline" destination="gg6-lU-k8b" id="mTe-fu-SSl"/>
                                     <outlet property="votesCount" destination="qis-e2-Kqo" id="Tks-d3-CBO"/>
@@ -99,7 +114,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="136.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yt-eN-RVm">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yt-eN-RVm" userLabel="userNameLabel">
                                             <rect key="frame" x="8" y="30" width="359" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="36" id="LPd-2g-jhF"/>
@@ -108,26 +123,28 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lck-2o-iw7">
-                                            <rect key="frame" x="8" y="74" width="359" height="55"/>
-                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Lap-mK-NhX" userLabel="bodyTextField">
+                                            <rect key="frame" x="8" y="60" width="359" height="68"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="1yt-eN-RVm" firstAttribute="leading" secondItem="lck-2o-iw7" secondAttribute="leading" id="OVj-YJ-fVd"/>
-                                        <constraint firstItem="1yt-eN-RVm" firstAttribute="trailing" secondItem="lck-2o-iw7" secondAttribute="trailing" id="PL2-DV-2lL"/>
-                                        <constraint firstItem="lck-2o-iw7" firstAttribute="top" secondItem="1yt-eN-RVm" secondAttribute="bottom" constant="8" symbolic="YES" id="PbJ-AN-rfA"/>
+                                        <constraint firstItem="Lap-mK-NhX" firstAttribute="leading" secondItem="1yt-eN-RVm" secondAttribute="leading" id="Eru-wF-PAR"/>
                                         <constraint firstItem="1yt-eN-RVm" firstAttribute="top" secondItem="4lO-Lq-WM8" secondAttribute="topMargin" constant="22" id="UXk-ot-NVu"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="lck-2o-iw7" secondAttribute="bottom" constant="-0.5" id="bGI-uC-rQs"/>
                                         <constraint firstItem="1yt-eN-RVm" firstAttribute="trailing" secondItem="4lO-Lq-WM8" secondAttribute="trailingMargin" id="bPa-4D-Pld"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Lap-mK-NhX" secondAttribute="bottom" constant="0.5" id="dHo-dg-X5M"/>
+                                        <constraint firstItem="Lap-mK-NhX" firstAttribute="top" secondItem="4lO-Lq-WM8" secondAttribute="topMargin" constant="52" id="g0k-4k-Wyv"/>
+                                        <constraint firstItem="Lap-mK-NhX" firstAttribute="trailing" secondItem="1yt-eN-RVm" secondAttribute="trailing" id="oFs-7M-M77"/>
                                         <constraint firstItem="1yt-eN-RVm" firstAttribute="leading" secondItem="4lO-Lq-WM8" secondAttribute="leadingMargin" id="xEV-4c-Mpi"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="CommentBodyLabel" destination="lck-2o-iw7" id="ixS-ol-isu"/>
                                     <outlet property="ProductNameLabel" destination="1yt-eN-RVm" id="Nhl-0C-SOs"/>
+                                    <outlet property="bodyTextField" destination="Lap-mK-NhX" id="So9-nh-WWp"/>
+                                    <outlet property="userNameLabel" destination="1yt-eN-RVm" id="fNh-ap-uPH"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
