--- a/product-hunt/product-hunt/Base.lproj/Main.storyboard
+++ b/product-hunt/product-hunt/Base.lproj/Main.storyboard
@@ -90,9 +90,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="kdk-X5-r7A"/>
-                    <connections>
-                        <segue destination="6tc-M3-cLk" kind="show" identifier="commentSegue" id="CSP-bN-9MR"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ujh-ox-KS0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -107,7 +104,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CommentViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="137" id="KQn-xj-TYt" userLabel="CommentCell" customClass="CommentViewCell" customModule="product_hunt">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CommentViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentViewCell" rowHeight="137" id="KQn-xj-TYt" userLabel="CommentViewCell" customClass="CommentViewCell" customModule="product_hunt">
                                 <rect key="frame" x="0.0" y="28" width="375" height="137"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KQn-xj-TYt" id="4lO-Lq-WM8">
@@ -142,16 +139,11 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="ProductNameLabel" destination="1yt-eN-RVm" id="Nhl-0C-SOs"/>
                                     <outlet property="bodyTextField" destination="Lap-mK-NhX" id="So9-nh-WWp"/>
                                     <outlet property="userNameLabel" destination="1yt-eN-RVm" id="fNh-ap-uPH"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="6tc-M3-cLk" id="WLV-oK-X18"/>
-                            <outlet property="delegate" destination="6tc-M3-cLk" id="Qqn-qJ-sek"/>
-                        </connections>
                     </tableView>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xaW-Mc-OP7" userLabel="First Responder" sceneMemberID="firstResponder"/>
